# clack

./: .gitignore  Cargo.toml  README.md  build_deb.sh  pyproject.toml
clack-cli/: Cargo.toml
clack-cli/src/: main.rs
clack-cli/tests/: deterministic.rs  edge_cases.rs
clack-core/: Cargo.toml
clack-core/src/: constants.rs  correction.rs  error.rs  keyboard.rs  language.rs  lib.rs  pause.rs  rng.rs  session.rs  state.rs  timing.rs  tokenizer.rs
packaging/arch/: PKGBUILD
